# Simago

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  README.rst  build_install.sh  combineHouseholdHomes.py  genProb_AgeSexRace.py  genProb_Education.py  generateExample.sh  generateHouses.py  generatePopulation.py  generatePopulation_yaml.py  prepareBuildingData.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  zipcodes.py
.github/workflows/: main.yml
conversion_scripts/: generate_age_csv.py  generate_sex_csv.py
data/: ACS_17_5YR_DP05.csv  ACS_17_5YR_S1501.csv  ChicagoHousePrices.csv  WORLD-2017-adapted.csv  age.csv  sex.csv
data-process/: agesexrace_prob.csv  prob_agesexrace.csv
data-yaml/example/: 3_income.yml  aggregated_data.yml_test
data/example/: age.csv  age_conditionals.csv  income_conditionals.csv  sex.csv
data_yaml/: 1_sex.yml  3_income.yml  age.yml  aggregated_data.yml  income.yml  sex.yml
docs/doctrees/: environment.pickle  index.doctree  modules.doctree  simago.doctree
example/: gen_population.py
output/: population.csv
scripts/: population.py  probabilities.py
simago/: __init__.py  __main__.py  contdist.py  discdist.py  population.py  probability.py  yamlutils.py
temp_folder/: combineHouseholdHomes.py  genProb_Income.py  generatePopulation.py  prepareCrimeData.py  reduceColumns.py
tests/: .test_population.py.swp  .test_probability.py.swp  .test_yamlutils.py.swp  test_population.py  test_probability.py  test_yamlutils.py
(+65 files in other folders)
