[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.interrogate]
ignore_init_method = true
verbose = 1
fail-under = 100

[tool.isort]
atomic = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
float_to_top = true

known_first_party = "simago"
known_third_party = ["numpy", "scipy", "pandas", "yaml", "pytest"]
